--- a/index.html
+++ b/index.html
@@ -57,5 +57,38 @@
                 </ul>
             </div>
     </header>
+    <section id="mainSlide" class="container-xxl">
+        <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="slide1_title">
+                  <h1>SOSOHAM</h1>
+                </div>
+                <div class="slide1_contents">
+                  <p>SOSOHAM은 사진 공유,게시글 공유, 개발자의 연습 공간으로 만들어진 웹입니다.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                
+              </div>
+              <div class="carousel-item">
+                
+              </div>
+            </div>
+            <!-- <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button> -->
+          </div>
+    </section>
 </body>
 </html>
