--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             margin: 0;
         }
         #main{
-            width: 1920px;
+            min-width: 1280px;
             overflow: hidden;
         }
         #main::after{
@@ -26,8 +26,7 @@
             position: absolute;
             z-index: -1;
             background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0.5) 15%);
-            background-size: cover;
-            width: 1920px;
+            width: 100%;
             height: 969px;
         }
     </style>
