반응형 테스트

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,6 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/screen.js"></script>
     <link href="css/main.css" rel="stylesheet">
     <title>SOSOHAM</title>
     <style>
@@ -17,17 +18,13 @@
             padding: 0;
             margin: 0;
         }
-        body{
-          overflow: hidden;
-        }
-        
     </style>
 </head>
 <body>
-    <video autoplay loop muted>
+    <section id="main">
+      <video autoplay loop muted>
         <source src="video/test5.mp4" type="video/mp4">
     </video>
-    <section id="main">
     </section>
     <header>
         <div id="nav">
