탭 미디어쿼리 완성

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.15.2/js/all.js" integrity="sha384-vuFJ2JiSdUpXLKGK+tDteQZBqNlMwAjhZ3TvPaDfN9QmbPb7Q8qUpbSNapQev3YF" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
-    <script src="js/screen.js"></script>
+    <script src="js/tapSlide.js"></script>
     <link href="css/main.css" rel="stylesheet">
     <title>SOSOHAM</title>
     <style>
@@ -106,9 +106,21 @@
                         <img id="test" src="img/bg9.jpg">
                       </li>
                     </ul>
-
+                    <!-- 768px이상 1280px이하-->
                     <div id="M_BG">
-                        
+                        <div id="fadeimgList">
+                          <img class="Mimg" src="img/bg1.jpg">
+                          <img class="Mimg" src="img/bg2.jpg">
+                          <img class="Mimg" src="img/bg3.jpg">
+                          <img class="Mimg" src="img/bg4.jpg">
+                          <img class="Mimg" src="img/bg5.jpg">
+                          <img class="Mimg" src="img/bg6.jpg">
+                          <img class="Mimg" src="img/bg7.jpg">
+                          <img class="Mimg" src="img/bg8.jpg">
+                          <img class="Mimg" src="img/bg9.jpg">
+                        </div>
+                        <div id="prev"><i class="fas fa-chevron-left"></i></div>
+                        <div id="next"><i class="fas fa-chevron-right"></i></div>
                     </div>
 
                   </div>
