태블릿 slideBox 수정

--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
                           <img class="Mimg" src="img/bg8.jpg">
                           <img class="Mimg" src="img/bg9.jpg">
                         </div>
-                        <div id="prev"><i class="fas fa-chevron-left"></i></div>
-                        <div id="next"><i class="fas fa-chevron-right"></i></div>
+                        <div id="prev"><i class="fas fa-chevron-left" id="prevAR"></i></div>
+                        <div id="next"><i class="fas fa-chevron-right" id="nextAR"></i></div>
                     </div>
 
                   </div>
