--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <source src="video/test5.mp4" type="video/mp4">
     </video>
     </section>
-    <header>
+    <header id="navContainer">
         <div id="nav">
             <div id="left_nav">
                 <img src="img/menu.png" width="50" height="50" style="float: left;" id="hamburger">
@@ -159,6 +159,64 @@
               <span class="visually-hidden">Next</span>
             </button> -->
           </div>
+    </section>
+    <section id="mobile">
+      <video id="mobile_video" autoplay loop muted>
+        <source src="video/test5.mp4" type="video/mp4">
+    </video>
+    <header id="mobile_nav">
+      <div id="M_nav">
+          <div id="M_left_nav">
+              <img src="img/menu.png" width="50" height="50" style="float: left;" id="M_hamburger">
+              <div id="M_SearchBox">
+                  <form action="">
+                      <input type="search" placeholder="search" id="M_Search">
+                      <i class="fas fa-search" id="M_searchIcon"></i>
+                  </form>
+              </div>
+          </div>
+          <div id="M_right_nav">
+              <ul>
+                  <li><h5>PICTURE</h5></li>
+                  <li><h5>NOTE</h5></li>
+                  <li><h5>LOGIN</h5></li>
+              </ul>
+          </div>
+    </header>
+      <div id="mobile_main">
+        <div class="container">
+          <div id="mobile_slide" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner h-100">
+              <div class="carousel-item h-100 active">
+                <div class="M_slide1_title">
+                  <h1>SOSOHAM</h1>
+                </div>
+                <div class="M_slide1_contents">
+                  <p>SOSOHAM은 사진 공유,게시글 공유, 개발자의 연습 공간으로 만들어진 웹입니다.</p>
+                  <p>로그인을 하여 여러 가지를 체험해보세요</p>
+                </div>
+                <div id="M_s1_main_Login">
+                  <button>로그인</button>
+                </div>
+              </div>
+              <div class="carousel-item h-100">
+                
+              </div>
+              <div class="carousel-item h-100">
+                
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#mobile_slide" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#mobile_slide" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+      </div>
     </section>
 </body>
 </html>
