모바일 main화면 완성

--- a/index.html
+++ b/index.html
@@ -200,10 +200,37 @@
                 </div>
               </div>
               <div class="carousel-item h-100">
-                
+                <div class="M_slide2_title">
+                  <h1>이미지 공유</h1>
+                </div>
+                <div class="M_slide2_contents">
+                  <p>나만의 이미지를 공유하고, 정보를 나눠요!</p>
+                </div>
+                <div id="M_s2_main_Login">
+                  <button>PICTURE</button>
+                </div>
               </div>
               <div class="carousel-item h-100">
-                
+                <div class="M_slide3_title">
+                  <h1>노트</h1>
+                </div>
+                <div class="M_slide3_contents">
+                  <p>남들과 함께 글을 공유하는 공간, 개발자의 노트장을 볼 수 있습니다.</p>
+                </div>
+                <ul id="M_s3_ul">
+                  <li>
+                    <div id="M_s3_main_Login">
+                      <button>TOGETHER</button>
+                    </div>
+                  </li>
+                  <li>
+                    <div id="M_s3_main_Login2">
+                      <button>DEVELOPER</button>
+                    </div>
+                  </li>
+                </ul>
+                </div>
+              </div>
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#mobile_slide" data-bs-slide="prev">
