크롬 브라우저 기준

--- a/index.html
+++ b/index.html
@@ -246,4 +246,11 @@
       </div>
     </section>
 </body>
+<script>
+  $(document).ready(function(){
+    if($(document).width() <= 768){
+      alert("해당 웹은 크롬 브라우저 기준으로 제작 됐습니다.");
+    }
+  });
+</script>
 </html>
