글씨 및 로그인 margin-top값 수정

--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
             padding: 0;
             margin: 0;
         }
+        a{
+            color: #fff !important;
+            text-decoration: none !important;
+        }
+        a:hover{
+          color: lightskyblue !important;
+        }
     </style>
 </head>
 <body>
@@ -40,9 +47,9 @@
             </div>
             <div id="right_nav">
                 <ul>
-                    <li><h5>PICTURE</h5></li>
-                    <li><h5>NOTE</h5></li>
-                    <li><h5>LOGIN</h5></li>
+                    <li><h5><a href="#">PICTURE</a></h5></li>
+                    <li><h5><a href="#">NOTE</a></h5></li>
+                    <li><h5><a href="login.html">LOGIN</a></h5></li>
                 </ul>
             </div>
     </header>
