--- a/login.html
+++ b/login.html
@@ -10,13 +10,48 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.15.2/js/all.js" integrity="sha384-vuFJ2JiSdUpXLKGK+tDteQZBqNlMwAjhZ3TvPaDfN9QmbPb7Q8qUpbSNapQev3YF" crossorigin="anonymous"></script>
+    <script src="js/login_nav.js"></script>
     <title>::로그인</title>
     <style>
         *{
             padding: 0;
             margin: 0;
         }
-        
+        a{
+            color: #fff !important;
+            text-decoration: none !important;
+        }
+        a:hover{
+          color: lightskyblue !important;
+        }
+        header{
+            width: 100%;
+            position: fixed;
+            top: 0;
+            left: 0;
+            padding: 10px 20px;
+            z-index: -1;
+            /* background-color: rgba(0, 0, 0, 0.5); */
+        }
+        .nav_hamberger{
+            float: left;
+            cursor: pointer;
+        }
+        #nav_hamberger{
+            font-size: 32px;
+            color: #fff;
+        }
+        #nav_ul{
+            display: none;
+            list-style: none;
+            float: left;
+            margin-bottom: 0 !important;
+            padding-top: 3px;
+        }
+        #nav_ul li{
+            display: inline-block;
+            margin-left: 4vw;
+        }
         #main img{
             position: fixed;
             top: 50%;
@@ -46,7 +81,7 @@
             padding: 0 20px;
         }
         input{
-            background-color: rgba(255, 255, 255, 0) !important;
+            background-color:transparent !important;
             color: #fff !important;
             border: 0px !important;
             border-bottom: 1px solid #fff !important;
@@ -63,6 +98,11 @@
         }
         #login_btn{
             margin-top: 40px !important;
+            color: #fff !important;
+            border-color: #fff !important;
+        }
+        #login_btn:hover{
+            border-color: #0d6efd !important;
         }
         #login_btn button{
             width: 100%;
@@ -94,23 +134,41 @@
     </style>
 </head>
 <body>
+    <header id="navi">
+        <div class="nav_hamberger">
+            <i class="fas fa-bars hamburger" id="nav_hamberger"></i>
+        </div>
+        <ul id="nav_ul">
+            <li>
+                <h5><a href="index.html">Home</a></h5>
+            </li>
+            <li>
+                <h5><a href="#">Picture</a></h5>
+            </li>
+            <li>
+                <h5><a href="#">Note</a></h5>
+            </li>
+        </ul>
+    </header>
     <section id="main">
         <img src="img/snowtown.jpg">
     </section>
     <section id="main_Login">
         <div class="container" id="container">
             <div id="contents">
-                <h1 class="mb-5">SOSOHAM</h1>
+                <h1 class="mb-5" id="title">SOSOHAM</h1>
                 <div id="login_info">
-                    <div class="mb-3">
-                        <input type="email" class="form-control" name="input_EMAIL" id="input_email" placeholder="name@example.com">
-                    </div>
-                    <div class="mb-5">
-                        <input type="password" class="form-control" name="input_password" id="input_password" placeholder="Password">
-                    </div>
-                    <div id="login_btn" class="mb-3">
-                        <button class="btn btn-success" id="login_btn">로그인</button>
-                    </div>
+                    <form action="" method="POST">
+                        <div class="mb-3">
+                            <input type="email" autocomplete="off" class="form-control" name="input_EMAIL" id="input_email" placeholder="name@example.com">
+                        </div>
+                        <div class="mb-5">
+                            <input type="password" class="form-control" name="input_password" id="input_password" placeholder="Password">
+                        </div>
+                        <div id="login_btn" class="mb-3">
+                            <button class="btn btn-outline-primary" type="submit" id="login_btn">로그인</button>
+                        </div>
+                    </form>
                     <div class="row" id="sub_login">
                         <div class="col-6">
                             <p id="find_IDPW">아이디 찾기/비밀번호 찾기</p>
