--- a/login.html
+++ b/login.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link href="css/login.css" rel="stylesheet">
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.15.2/js/all.js" integrity="sha384-vuFJ2JiSdUpXLKGK+tDteQZBqNlMwAjhZ3TvPaDfN9QmbPb7Q8qUpbSNapQev3YF" crossorigin="anonymous"></script>
-    <script src="js/login_nav.js"></script>
+    <script src="js/nav.js"></script>
     <title>::로그인</title>
     <style>
         *{
@@ -23,113 +24,6 @@
         }
         a:hover{
           color: lightskyblue !important;
-        }
-        header{
-            width: 100%;
-            position: fixed;
-            top: 0;
-            left: 0;
-            padding: 10px 20px;
-            z-index: -1;
-            /* background-color: rgba(0, 0, 0, 0.5); */
-        }
-        .nav_hamberger{
-            float: left;
-            cursor: pointer;
-        }
-        #nav_hamberger{
-            font-size: 32px;
-            color: #fff;
-        }
-        #nav_ul{
-            display: none;
-            list-style: none;
-            float: left;
-            margin-bottom: 0 !important;
-            padding-top: 3px;
-        }
-        #nav_ul li{
-            display: inline-block;
-            margin-left: 4vw;
-        }
-        #main img{
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            min-width: 100%;
-            min-height: 100%;
-            z-index: -9999;
-            transform: translateX(-50%) translateY(-50%);
-            filter: brightness(60%);
-        }
-        #main_Login{
-            margin: 0 auto;
-        }
-        #container{
-            margin-top: 20vh;
-            padding: 0;
-        }
-        #contents{
-            text-align: center;
-            color: #fff;
-            min-width: 360px;
-            max-width: 600px;
-            height: 300px;
-            margin: 0 auto;
-        }
-        #login_info{
-            padding: 0 20px;
-        }
-        input{
-            background-color:transparent !important;
-            color: #fff !important;
-            border: 0px !important;
-            border-bottom: 1px solid #fff !important;
-            border-radius: 0px !important;
-            margin-bottom: 20px !important;
-        }
-        input::placeholder{
-            color: rgba(255, 255, 255, 0.5) !important;
-        }
-        input:focus{
-            outline: none !important;
-            box-shadow: none !important;
-            border-bottom-color: rgb(0, 140, 255) !important;
-        }
-        #login_btn{
-            margin-top: 40px !important;
-            color: #fff !important;
-            border-color: #fff !important;
-        }
-        #login_btn:hover{
-            border-color: #0d6efd !important;
-        }
-        #login_btn button{
-            width: 100%;
-            padding: 10px 0px;
-        }
-        #sub_login{
-            position: relative;
-        }
-        #sub_login p{
-            width: 100%;
-            padding: 10px 0px;
-        }
-        #sub_login::after{
-            content: "";
-            position: absolute;
-            width: 1px;
-            height: 30px;
-            background-color: #fff;
-            top: 10px;
-            left: 50%;
-            transform:translateX(-50%);
-        }
-        #find_IDPW{
-            color: #fff !important;
-        }
-        #newID{
-            color: #fff !important;
         }
     </style>
 </head>
