--- a/login.html
+++ b/login.html
@@ -40,7 +40,7 @@
                 <h5><a href="#">Picture</a></h5>
             </li>
             <li>
-                <h5><a href="#">Note</a></h5>
+                <h5><a href="note_main.html">Note</a></h5>
             </li>
         </ul>
     </header>
