--- a/note_main.html
+++ b/note_main.html
@@ -243,7 +243,7 @@
                 <h5><a href="#">Picture</a></h5>
             </li>
             <li>
-                <h5><a href="#">Note</a></h5>
+                <h5><a href="login.html">Login</a></h5>
             </li>
         </ul>
     </header>
