노트 메인 모바일 디자인 진행중..

--- a/login.html
+++ b/login.html
@@ -65,7 +65,7 @@
                     </form>
                     <div class="row" id="sub_login">
                         <div class="col-6">
-                            <p id="find_IDPW">아이디 찾기/비밀번호 찾기</p>
+                            <p id="find_IDPW">아이디 / 비밀번호 찾기</p>
                         </div>
                         <div class="col-6">
                             <p id="newID">회원가입</p>
