--- a/note_main.html
+++ b/note_main.html
@@ -35,6 +35,9 @@
         <div class="nav_hamberger">
             <i class="fas fa-bars hamburger" id="nav_hamberger"></i>
         </div>
+        <div class="nav_plus">
+            <i class="far fa-plus-square plus" id="nav_plus"></i>
+        </div>
         <ul id="nav_ul">
             <li>
                 <h5><a href="index.html">Home</a></h5>
@@ -91,6 +94,48 @@
                 </div>
             </div>
         </div>
+        <div id="M_aside_menu">
+            <div id="M_aside_main">
+                <div id="M_user">
+                    <button type="button" class="btn btn-primary" id="M_note_login">로그인</button>
+                </div>
+                <div id="M_category">
+                    <div id="M_note_list">
+                        <h4>노트</h4>
+                        <ul>
+                            <li>
+                                <h5>홈</h5>
+                            </li>
+                            <li>
+                                <h5>게시판</h5>
+                            </li>
+                            <li>
+                                <h5>개발자 게시판</h5>
+                            </li>
+                        </ul>
+                    </div>
+                    <div id="M_picture_list">
+                        <h4>사진</h4>
+                        <ul>
+                            <li>
+                                <h5>홈</h5>
+                            </li>
+                        </ul>
+                    </div>
+                    <div id="M_picture_list">
+                        <h4>문의하기</h4>
+                        <ul>
+                            <li>
+                                <h5>QnA</h5>
+                            </li>
+                            <li>
+                                <h5>건의하기</h5>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div id="top_contents">
             <div id="top_contents_list">
                 <div id="up_title">
@@ -127,7 +172,7 @@
                 </div>
             </div>
         </div>
-        <div id="contents">
+        <div id="contents" class="contentsBackground">
             <div class="list">
                 <div class="num_list">
                     <span class="no_list">1</span>
