--- a/note_main.html
+++ b/note_main.html
@@ -12,6 +12,7 @@
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.15.2/js/all.js" integrity="sha384-vuFJ2JiSdUpXLKGK+tDteQZBqNlMwAjhZ3TvPaDfN9QmbPb7Q8qUpbSNapQev3YF" crossorigin="anonymous"></script>
     <script src="js/nav.js"></script>
+    <script src="js/Mobile_menu.js"></script>
     <title>::노트</title>
     <style>
         *{
@@ -50,6 +51,51 @@
             </li>
         </ul>
     </header>
+    <div id="M_aside_menu">
+        <div id="M_aside_main">
+            <div id="close">
+                <i class="fas fa-times" id="close_btn"></i>
+            </div>
+            <div id="M_user">
+                <button type="button" class="btn btn-primary" id="M_note_login">로그인</button>
+            </div>
+            <div id="M_category">
+                <div id="M_note_list">
+                    <h4>노트</h4>
+                    <ul>
+                        <li>
+                            <h5>홈</h5>
+                        </li>
+                        <li>
+                            <h5>게시판</h5>
+                        </li>
+                        <li>
+                            <h5>개발자 게시판</h5>
+                        </li>
+                    </ul>
+                </div>
+                <div id="M_picture_list">
+                    <h4>사진</h4>
+                    <ul>
+                        <li>
+                            <h5>홈</h5>
+                        </li>
+                    </ul>
+                </div>
+                <div id="M_picture_list">
+                    <h4>문의하기</h4>
+                    <ul>
+                        <li>
+                            <h5>QnA</h5>
+                        </li>
+                        <li>
+                            <h5>건의하기</h5>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
     <div id="topImg">
         <img src="img/nightcity.jpg">
     </div>
@@ -94,48 +140,6 @@
                 </div>
             </div>
         </div>
-        <div id="M_aside_menu">
-            <div id="M_aside_main">
-                <div id="M_user">
-                    <button type="button" class="btn btn-primary" id="M_note_login">로그인</button>
-                </div>
-                <div id="M_category">
-                    <div id="M_note_list">
-                        <h4>노트</h4>
-                        <ul>
-                            <li>
-                                <h5>홈</h5>
-                            </li>
-                            <li>
-                                <h5>게시판</h5>
-                            </li>
-                            <li>
-                                <h5>개발자 게시판</h5>
-                            </li>
-                        </ul>
-                    </div>
-                    <div id="M_picture_list">
-                        <h4>사진</h4>
-                        <ul>
-                            <li>
-                                <h5>홈</h5>
-                            </li>
-                        </ul>
-                    </div>
-                    <div id="M_picture_list">
-                        <h4>문의하기</h4>
-                        <ul>
-                            <li>
-                                <h5>QnA</h5>
-                            </li>
-                            <li>
-                                <h5>건의하기</h5>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
         <div id="top_contents">
             <div id="top_contents_list">
                 <div id="up_title">
@@ -143,8 +147,8 @@
                         <h4>홈</h3>
                     </div>
                     <div id="up_title_right">
-                        <button type="button" class="btn btn-success"><i class="far fa-sticky-note"></i> 내 글 보기</button>
-                        <button type="button" class="btn btn-primary"><i class="far fa-edit"></i> 글쓰기</button>
+                        <button type="button" class="btn btn-success" id="myPost"><i class="far fa-sticky-note"></i> 내 글 보기</button>
+                        <button type="button" class="btn btn-primary" id="doWrite"><i class="far fa-edit"></i> 글쓰기</button>
                     </div>
                 </div>
                 <div id="down_title">
@@ -172,7 +176,7 @@
                 </div>
             </div>
         </div>
-        <div id="contents" class="contentsBackground">
+        <div id="contents">
             <div class="list">
                 <div class="num_list">
                     <span class="no_list">1</span>
