--- a/note_main.html
+++ b/note_main.html
@@ -33,6 +33,7 @@
 </head>
 <body>
     <header id="navi">
+        <div id="navi_background"></div>
         <div class="nav_hamberger">
             <i class="fas fa-bars hamburger" id="nav_hamberger"></i>
         </div>
