--- a/login.html
+++ b/login.html
@@ -29,6 +29,7 @@
 </head>
 <body>
     <header id="navi">
+        <div id="navi_background"></div>
         <div class="nav_hamberger">
             <i class="fas fa-bars hamburger" id="nav_hamberger"></i>
         </div>
