노트작성 디자인 완료, 회원가입 폼 디자인 완료

--- a/note_main.html
+++ b/note_main.html
@@ -110,13 +110,13 @@
                     <h4>노트</h4>
                     <ul>
                         <li>
-                            <h5>홈</h5>
+                            <a href="#"><h5>홈</h5></a>
                         </li>
                         <li>
-                            <h5>게시판</h5>
+                            <a href="#"><h5>게시판</h5></a>
                         </li>
                         <li>
-                            <h5>개발자 게시판</h5>
+                            <a href="#"><h5>개발자 게시판</h5></a>
                         </li>
                     </ul>
                 </div>
@@ -124,18 +124,18 @@
                     <h4>사진</h4>
                     <ul>
                         <li>
-                            <h5>홈</h5>
+                            <a href="#"><h5>홈</h5></a>
                         </li>
                     </ul>
                 </div>
-                <div id="picture_list">
+                <div id="etc_list">
                     <h4>문의하기</h4>
                     <ul>
                         <li>
-                            <h5>QnA</h5>
+                            <a href="#"><h5>QnA</h5></a>
                         </li>
                         <li>
-                            <h5>건의하기</h5>
+                            <a href="#"><h5>건의하기</h5></a>
                         </li>
                     </ul>
                 </div>
@@ -149,7 +149,7 @@
                     </div>
                     <div id="up_title_right">
                         <button type="button" class="btn btn-success" id="myPost"><i class="far fa-sticky-note"></i> 내 글 보기</button>
-                        <button type="button" class="btn btn-primary" id="doWrite"><i class="far fa-edit"></i> 글쓰기</button>
+                        <a href="note_write.html" class="btn btn-primary" id="doWrite"><i class="far fa-edit"></i> 글쓰기</a>
                     </div>
                 </div>
                 <div id="down_title">
