--- a/note_write.html
+++ b/note_write.html
@@ -50,8 +50,11 @@
                 <h5><a href="#">Picture</a></h5>
             </li>
             <li>
-                <h5><a href="login.html">Login</a></h5>
+                <h5><a href="note_main.html">Note</a></h5>
             </li>
+            <li>
+              <h5><a href="login.html">Login</a></h5>
+          </li>
         </ul>
     </header>
     <div id="M_aside_menu">
