--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
       </div>
       <ul id="nav_ul">
           <li>
+            <h5><a href="index.html">Home</a></h5>
+          </li>
+          <li>
               <h5><a href="#">Picture</a></h5>
           </li>
           <li>
